--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="string_alone">You are not alone</string>
     <string name="string_master">You can be master</string>
     <string name="string_keep">You always keep good working and smile happly</string>
+    <string name="thenewboston">thenewboston</string>
 
 
 </resources>
